# data_marcup_system

./: .env  docker-compose.yaml  main.py  pyproject.toml  requiments.txt
api_v1/annotations/: schemas.py
api_v1/assigments/: crud.py  views.py
api_v1/assignments/: crud.py  schemas.py  views.py
api_v1/core/: .env  DBHelper.py  config.py
api_v1/core/models/: Base.py  annotations.py  assigments.py  assignments.py  task.py  task_templates.py  tasks.py  users.py
api_v1/stats/: crud.py  schemas.py  views.py
api_v1/task_templates/: crud.py  schemas.py  views.py
api_v1/tasks/: crud.py  schemas.py  views.py
api_v1/users/: auth.py  schemas.py
