[tool.poetry]
name = "data-marcup-system"
version = "0.1.0"
description = ""
authors = ["Deprotate <gribozui.top@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.0"
uvicorn = "^0.35.0"
sqlalchemy = "^2.0.41"
fastapi-users = {extras = ["sqlalchemy2"], version = "^14.0.1"}
asyncpg = "^0.30.0"
bcrypt = "^4.3.0"
pydantic-settings = "^2.10.1"
fastapi-users-db-sqlalchemy = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
